--- a/conf/default_mv.conf
+++ b/conf/default_mv.conf
@@ -4,18 +4,17 @@ model {
     # MLP architecture
     # Adapted for multiview
     # Possibly too big
-    mlp_coarse {
+    mlp_coarse = {
         type = resnet
         n_blocks = 5
-        d_hidden = 512
         # Combine after 3rd layer by average
         combine_layer = 3
         combine_type = average
     }
-    mlp_fine {
+    
+    "mlp_fine" = {
         type = resnet
         n_blocks = 5
-        d_hidden = 512
         combine_layer = 3
         combine_type = average
     }
