--- a/conf/test.conf
+++ b/conf/test.conf
@@ -1,3 +1,45 @@
+# To save typing, this file offers a way to associate
+# default config files (-c) and datase directories (-D) with expnames 
+config {
+    # expname = config_file_path
+    # path should be under <project root>
+    sn64 = conf/exp/sn64.conf
+    sn64_unseen = conf/exp/sn64_unseen.conf
+    srn_chair = conf/exp/srn.conf
+    srn_car = conf/exp/srn.conf
+    dtu = conf/exp/dtu.conf
+    multi_obj = conf/exp/multi_obj.conf
+}
+
+datadir {
+    # expname = data directory
+}
+
+conf/default_mv.conf
+# Main multiview supported config
+include required("default.conf")
+model {
+    # MLP architecture
+    # Adapted for multiview
+    # Possibly too big
+    mlp_coarse {
+        type= resnet
+        n_blocks= 5
+        d_hidden= 512
+        # Combine after 3rd layer by average
+        combine_layer= 3
+        combine_type= average
+    }
+    
+    mlp_fine {
+        type= resnet
+        n_blocks= 5
+        d_hidden= 512
+        combine_layer= 3
+        combine_type= average
+    }
+}
+
 # Single-view only base model
 # (Not used in experiments; resnet_fine_mv.conf inherits)
 model {
@@ -31,12 +73,12 @@ model {
     mlp_coarse {
         type = resnet  # Can change to mlp
         n_blocks = 3
-        # d_hidden = 512
+        d_hidden = 512
     }
     mlp_fine {
         type = resnet
         n_blocks = 3
-        # d_hidden = 512
+        d_hidden = 512
     }
 
     # Encoder architecture
